git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@9 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,7 +7,7 @@ export(fitCopula)
 export(neighbourhood)
 exportClasses(asCopula, cqsCopula, neighbourhood)
 export(dducopula,ddvcopula)
-export(setNeighbourLim)
+export(setSizeLim)
 export(getNeighbours)
 
 ## exportClasses(mvdc) ## S4 methods
