--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,6 +7,7 @@ export(fitCopula)
 export(neighbourhood)
 exportClasses(asCopula, cqsCopula, neighbourhood)
 export(dducopula,ddvcopula)
+export(invdducopula, invddvcopula)
 export(setSizeLim)
 export(getNeighbours)
 
