--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,18 +1,18 @@
-Package: spCopula
+Package: spcopula
 Type: Package
-Title: What the package does (short line)
+Title: copula driven spatial analysis
 Version: 1.0
-Date: 2011-03-01
+Date: 2011-04-19
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse spatial data provided in the format of the sp package with copulas.
 License: GPL-2
 LazyLoad: yes
-Depends: copula, sp
+Depends: copula, sp, methods
 URL: ifgi.uni-muenster.de/graeler
 Collate:
   Classes.R 
-  spCopula.R 
+  spcopula.R 
   asCopula.R 
   cqsCopula.R 
   partialDerivatives.R 
