--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse spatial data provided in the format of the sp package with copulas.
 License: GPL-2
 LazyLoad: yes
-Depends: copula, sp, methods
+Depends: copula, sp, methods, R (>= 2.11.0)
 URL: ifgi.uni-muenster.de/graeler
 Collate:
   Classes.R 
