linking to CDVine
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@23 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,12 +8,16 @@ Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse spatial data provided in the format of the sp package with copulas.
 License: GPL-2
 LazyLoad: yes
-Depends: copula, sp, methods, R (>= 2.11.0)
+Depends: copula, sp, CDVine, methods, R (>= 2.11.0)
 URL: ifgi.uni-muenster.de/graeler
 Collate:
-  Classes.R 
+  Classes.R
   spcopula.R 
   cqsCopula.R
-  asCopula.R  
+  asCopula.R
   partialDerivatives.R 
   spatialPreparation.R
+  linkingCDVine.R
+  BB6copula.R
+  BB7copula.R
+  BB8copula.R
