--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,15 +1,26 @@
 ## useDynLib(spCopula)
 
-import(copula, sp)
+import(copula, sp, CDVine)
 
+# constructor
 export(asCopula, cqsCopula)
-export(fitCopula)
+export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
+export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
+export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 export(neighbourhood)
-exportClasses(asCopula, cqsCopula, neighbourhood)
+
+# functions
+export(fitCopula)
 export(dducopula,ddvcopula)
 export(invdducopula, invddvcopula)
 export(setSizeLim)
 export(getNeighbours)
+
+# classes
+exportClasses(asCopula, cqsCopula, neighbourhood)
+exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
+exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
+exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 
 ## exportClasses(mvdc) ## S4 methods
 ## exportMethods(persp, contour)
