--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,4 @@
-## useDynLib(spCopula)
+useDynLib(spcopula)
 
 import(copula, sp, CDVine)
 
@@ -7,20 +7,29 @@ export(asCopula, cqsCopula)
 export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
+export(vineCopula)
 export(neighbourhood)
 
-# functions
+# general functions
 export(fitCopula)
 export(dducopula,ddvcopula)
 export(invdducopula, invddvcopula)
 export(setSizeLim)
 export(getNeighbours)
+export(qcopula_u)
+export(genEmpCop)
 
-# classes
+# MRP functions
+export(genEmpKenFun, genInvKenFun)
+
+## classes
 exportClasses(asCopula, cqsCopula, neighbourhood)
+
+# wrappers to CDVine
 exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
+exportClasses(vineCopula)
 
 ## exportClasses(mvdc) ## S4 methods
 ## exportMethods(persp, contour)
