utilitiy functions included
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@29 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,6 @@
-useDynLib(spcopula)
+# useDynLib(spcopula)
 
-import(copula, sp, CDVine)
+import(copula, sp, CDVine, lattice)
 
 # constructor
 export(asCopula, cqsCopula)
@@ -11,6 +11,7 @@ export(vineCopula)
 export(neighbourhood)
 
 # general functions
+export(rankTransform, dependencePlot, univScatter)
 export(fitCopula)
 export(dducopula,ddvcopula)
 export(invdducopula, invddvcopula)
