BB1 copula imncluded
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@32 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -18,6 +18,7 @@ Collate:
   partialDerivatives.R 
   spatialPreparation.R
   linkingCDVine.R
+  BB1copula.R
   BB6copula.R
   BB7copula.R
   BB8copula.R
