--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,7 @@ import(copula, sp, CDVine, lattice)
 
 # constructor
 export(asCopula, cqsCopula)
+export(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
