--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -16,10 +16,15 @@ export(rankTransform, dependencePlot, univScatter)
 export(fitCopula)
 export(dducopula,ddvcopula)
 export(invdducopula, invddvcopula)
-export(setSizeLim)
-export(getNeighbours)
 export(qcopula_u)
 export(genEmpCop)
+
+# tewaks
+export(setSizeLim)
+
+# spatial
+export(getNeighbours)
+export(calcBins)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
@@ -29,6 +34,7 @@ export(kendallRP, criticalLevel)
 exportClasses(asCopula, cqsCopula, neighbourhood)
 
 # wrappers to CDVine
+exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
