--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,6 +8,7 @@ export(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
+export(JoeCopula, surJoeCopula, r90JoeCopula, r270JoeCopula)
 export(vineCopula)
 export(neighbourhood)
 
@@ -25,6 +26,8 @@ export(setSizeLim)
 # spatial
 export(getNeighbours)
 export(calcBins)
+# fitting
+export(fitCorFun, loglikByCopulasLags, composeSpCop, fitSpCopula)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
