first bug fixes
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@41 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,21 +1,21 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.40
+Version: 1.0.41
 Date: 2012-01-27
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse spatial data provided in the format of the sp package with copulas. Additionally, support for calculating multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula, sp, CDVine, methods, lattice, R (>= 2.11.0)
+Depends: copula, spacetime, CDVine, methods, lattice, R (>= 2.11.0)
 URL: ifgi.uni-muenster.de/graeler
 Collate:
   Classes.R
-  spcopula.R 
+  partialDerivatives.R
   cqsCopula.R
-  asCopula.R
-  partialDerivatives.R 
+  asCopula.R 
+  spcopula.R 
   spatialPreparation.R
   linkingCDVine.R
   BB1copula.R
