--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,10 @@
+
+
+
 # useDynLib(spcopula)
 
-import(copula, sp, CDVine, lattice)
+import(copula, sp, spacetime, CDVine, lattice)
+# importClassesFrom(spacetime, STFDF)
 
 # constructor
 export(asCopula, cqsCopula)
@@ -28,6 +32,7 @@ export(getNeighbours)
 export(calcBins)
 # fitting
 export(fitCorFun, loglikByCopulasLags, composeSpCop, fitSpCopula)
+export(spCopula)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
@@ -41,7 +46,8 @@ exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
-exportClasses(vineCopula)
+exportClasses(JoeCopula, surJoeCopula, r90JoeCopula, r270JoeCopula)
+exportClasses(vineCopula, spCopula)
 
 ## exportClasses(mvdc) ## S4 methods
 ## exportMethods(persp, contour)
