fixed: copula_0.9-7 compability added: kendallDistribution function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@42 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,3 @@
-
-
-
 # useDynLib(spcopula)
 
 import(copula, sp, spacetime, CDVine, lattice)
@@ -36,7 +33,7 @@ export(spCopula)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
-export(kendallRP, criticalLevel)
+export(kendallRP, criticalLevel, kendallDistribution)
 
 ## classes
 exportClasses(asCopula, cqsCopula, neighbourhood)
