git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@46 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,6 @@
 # useDynLib(spcopula)
 
-import(copula, sp, spacetime, CDVine, lattice)
+import(copula, spacetime, CDVine, lattice)
 # importClassesFrom(spacetime, STFDF)
 
 # constructor
