--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -10,6 +10,8 @@ export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 export(JoeCopula, surJoeCopula, r90JoeCopula, r270JoeCopula)
+export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
+export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 export(vineCopula)
 export(neighbourhood)
 
