--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.57
-Date: 2012-03-13
+Version: 1.0.58
+Date: 2012-05-29
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
-Description: This package provides a framework to analyse spatial data provided in the format of the sp package with copulas. Additionally, support for calculating multivariate return periods is implemented.
+Description: This package provides a framework to analyse spatial data provided in the format of the spacetime package with copulas. Additionally, support for calculating multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula, spacetime, CDVine, methods, lattice, R (>= 2.13.2)
+Depends: copula (>= 0.99-1), spacetime, CDVine, methods, lattice, R (>= 2.13.2)
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
