fixing some of the major changes in copula
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@62 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -18,12 +18,12 @@ export(neighbourhood)
 # general functions
 export(rankTransform, dependencePlot, univScatter)
 export(fitCopula)
-export(dducopula,ddvcopula)
-export(invdducopula, invddvcopula)
-export(qcopula_u)
+export(dduCopula,ddvCopula)
+export(invdduCopula, invddvCopula)
+export(qCopula_u)
 export(genEmpCop)
 
-# tewaks
+# tweaks
 export(setSizeLim)
 
 # spatial
