still adapting to major changes in copula
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@64 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -16,7 +16,7 @@ export(vineCopula)
 export(neighbourhood)
 
 # general functions
-export(rankTransform, dependencePlot, univScatter)
+export(rankTransform, dependencePlot, unitScatter, univScatter)
 export(fitCopula)
 export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
