--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -35,7 +35,7 @@ export(spCopula)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
-export(kendallRP, criticalLevel, kendallDistribution)
+export(kendallRP, criticalLevel, kendallDistribution, getKendallDistr)
 
 ## classes
 exportClasses(asCopula, cqsCopula, neighbourhood)
