--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -24,7 +24,7 @@ export(qCopula_u)
 export(genEmpCop)
 
 # tweaks
-export(setSizeLim)
+# export(setSizeLim)
 
 # spatial
 export(getNeighbours)
@@ -46,13 +46,7 @@ exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 exportClasses(JoeCopula, surJoeCopula, r90JoeCopula, r270JoeCopula)
-exportClasses(vineCopula, spCopula)
+exportClasses(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
+exportClasses(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 
-## exportClasses(mvdc) ## S4 methods
-## exportMethods(persp, contour)
-## S3method(print, indepTest)
-## importClassesFrom(package, ...)
-## importMethodsFrom(package, ...)
-
-
-
+exportClasses(vineCopula, spCopula, stCopula)
