- some cleaning - renaming of JoeCopula to joeBiCopula to avoid confusion with joeCopula from the copula package - further helpfiles
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@69 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.68
+Version: 1.0.69
 Date: 2012-11-30
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
@@ -23,7 +23,7 @@ Collate:
   BB6copula.R
   BB7copula.R
   BB8copula.R
-  JoeCopula.R
+  joeBiCopula.R
   ClaytonGumbelCopula.R
   vineCopulas.R
   utilities.R
