--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,7 +9,7 @@ export(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
-export(JoeCopula, surJoeCopula, r90JoeCopula, r270JoeCopula)
+export(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 export(vineCopula)
@@ -45,7 +45,7 @@ exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
 exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
-exportClasses(JoeCopula, surJoeCopula, r90JoeCopula, r270JoeCopula)
+exportClasses(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 exportClasses(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 exportClasses(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 
