- few bug fixes - documentation is now complete!
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@72 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -29,8 +29,9 @@ export(genEmpCop)
 # spatial
 export(getNeighbours)
 export(calcBins)
+
 # fitting
-export(fitCorFun, loglikByCopulasLags, composeSpCop, fitSpCopula)
+export(fitCorFun, loglikByCopulasLags, fitSpCopula, composeSpCopula)
 export(spCopula)
 
 # MRP functions
