--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.71
-Date: 2012-12-18
+Version: 1.0.72
+Date: 2012-12-20
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
-Description: This package provides a framework to analyse spatial data provided in the format of the spacetime package with copulas. Additionally, support for calculating multivariate return periods is implemented.
+Description: This package provides a framework to analyse spatial data provided in the format of the spacetime package with copulas. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
 Depends: copula (>= 0.99-2), spacetime, CDVine, methods, lattice, R (>= 2.13.2)
@@ -15,8 +15,8 @@ Collate:
   partialDerivatives.R
   cqsCopula.R
   asCopula.R 
-  spcopula.R 
-  stcopula.R
+  spCopula.R 
+  stCopula.R
   spatialPreparation.R
   linkingCDVine.R
   BB1copula.R
