--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -14,6 +14,7 @@ export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 export(vineCopula)
 export(neighbourhood)
+export(empiricalCopula, genEmpCop)
 
 # general functions
 export(rankTransform, dependencePlot, unitScatter, univScatter)
@@ -21,7 +22,6 @@ export(fitCopula)
 export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
 export(qCopula_u)
-export(genEmpCop)
 
 # tweaks
 # export(setSizeLim)
@@ -37,9 +37,10 @@ export(spCopula)
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
 export(kendallRP, criticalLevel, kendallDistribution, getKendallDistr)
+export(criticalPair, criticalTriple)
 
 ## classes
-exportClasses(asCopula, cqsCopula, neighbourhood)
+exportClasses(asCopula, cqsCopula, neighbourhood, empiricalCopula)
 
 # wrappers to CDVine
 exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
