--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.73
-Date: 2012-12-21
+Version: 1.0.74
+Date: 2012-12-28
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse spatial data provided in the format of the spacetime package with copulas. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula (>= 0.99-2), spacetime, CDVine, methods, lattice, R (>= 2.13.2)
+Depends: copula (>= 0.999-5), spacetime (>= 1.0-2), CDVine, methods, lattice, R (>= 2.15.0)
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
