--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.74
-Date: 2012-12-28
+Version: 1.0.75
+Date: 2013-01-05
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
-Description: This package provides a framework to analyse spatial data provided in the format of the spacetime package with copulas. Additionally, support for calculating different multivariate return periods is implemented.
+Description: This package provides a framework to analyse spatial and spatio-temporal data provided in the format of the spacetime package with copulas. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
 Depends: copula (>= 0.999-5), spacetime (>= 1.0-2), CDVine, methods, lattice, R (>= 2.15.0)
