--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
-Version: 1.0.76
-Date: 2013-01-05
+Version: 0.1-1
+Date: 2013-01-06
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse spatial and spatio-temporal data provided in the format of the spacetime package with copulas. Additionally, support for calculating different multivariate return periods is implemented.
