- changed arguments for dCopula and pCopula for the spatial and spatio-temporal copulas - various cosmnetics - use wrapper to C-functions from copula
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@78 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,7 +1,4 @@
-# useDynLib(spcopula)
-
-import(copula, spacetime, CDVine, lattice)
-# importClassesFrom(spacetime, STFDF)
+import(copula, spacetime, CDVine)
 
 # constructor
 export(asCopula, cqsCopula)
