--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,10 +5,10 @@ Version: 0.1-1
 Date: 2013-01-06
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
-Description: This package provides a framework to analyse spatial and spatio-temporal data provided in the format of the spacetime package with copulas. Additionally, support for calculating different multivariate return periods is implemented.
+Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of the spacetime package. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula (>= 0.999-5), spacetime (>= 1.0-2), CDVine, methods, lattice, R (>= 2.15.0)
+Depends: copula (>= 0.999-5), spacetime (>= 1.0-2), CDVine, methods, R (>= 2.15.0)
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
