--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
 Version: 0.1-1
-Date: 2013-01-06
+Date: 2013-01-23
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of the spacetime package. Additionally, support for calculating different multivariate return periods is implemented.
@@ -16,6 +16,7 @@ Collate:
   partialDerivatives.R
   cqsCopula.R
   asCopula.R 
+  leafCopula.R
   spCopula.R 
   stCopula.R
   spatialPreparation.R
