- modified EOL treatment in svn - borrowed C-Code from CDVine
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@81 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -20,6 +20,7 @@ Collate:
   spCopula.R 
   stCopula.R
   spatialPreparation.R
+  wrappingCFunctions.R
   linkingCDVine.R
   BB1copula.R
   BB6copula.R
