--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,7 +1,7 @@
 import(copula, spacetime, CDVine)
 
 # constructor
-export(asCopula, cqsCopula, leafCopula)
+export(asCopula, cqsCopula)
 export(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
 export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
 export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
@@ -37,7 +37,7 @@ export(kendallRP, criticalLevel, kendallDistribution, getKendallDistr)
 export(criticalPair, criticalTriple)
 
 ## classes
-exportClasses(asCopula, cqsCopula, neighbourhood, empiricalCopula, leafCopula)
+exportClasses(asCopula, cqsCopula, neighbourhood, empiricalCopula)
 
 # wrappers to CDVine
 exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
@@ -49,3 +49,5 @@ exportClasses(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 exportClasses(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 
 exportClasses(vineCopula, spCopula, stCopula)
+
+useDynLib("spcopula")
