--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,13 +2,13 @@ Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
 Version: 0.1-1
-Date: 2013-01-23
+Date: 2013-01-30
 Author: Benedikt Graeler
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of the spacetime package. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula (>= 0.999-5), spacetime (>= 1.0-2), CDVine, methods, R (>= 2.15.0)
+Depends: copula (>= 0.999-5), spacetime (>= 1.0-2), VineCopula, methods, R (>= 2.15.0)
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
@@ -21,7 +21,7 @@ Collate:
   stCopula.R
   spatialPreparation.R
   wrappingCFunctions.R
-  linkingCDVine.R
+  linkingVineCopula.R
   BB1copula.R
   BB6copula.R
   BB7copula.R
