--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,12 +9,12 @@ export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 export(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
-export(vineCopula)
+export(vineCopula, spVineCopula)
 export(neighbourhood)
 export(empiricalCopula, genEmpCop)
 
 # general functions
-export(rankTransform, dependencePlot, unitScatter, univScatter)
+export(rankTransform, dependencePlot, unitScatter, univScatter, copulaFromFamilyIndex)
 export(fitCopula)
 export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
@@ -38,6 +38,7 @@ export(criticalPair, criticalTriple)
 
 ## classes
 exportClasses(asCopula, cqsCopula, neighbourhood, empiricalCopula)
+exportClasses(vineCopula, spCopula, stCopula, spVineCopula)
 
 # wrappers to CDVine
 exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
@@ -47,7 +48,5 @@ exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 exportClasses(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 exportClasses(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 exportClasses(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
-
-exportClasses(vineCopula, spCopula, stCopula)
 
 useDynLib("spcopula")
