- removed C-code and point to R-wrappers in VineCopula instead
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@85 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -49,4 +49,4 @@ exportClasses(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 exportClasses(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 exportClasses(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 
-useDynLib("spcopula")
+# useDynLib("spcopula")
