- added spCopPredict functions - cleaning - getNeighbours can be used for prediction as well, twice as fast as before - all fitCopula retun now a fitCopula object
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@90 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -19,6 +19,7 @@ export(fitCopula)
 export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
 export(qCopula_u)
+export(condSpVine,spCopPredict)
 
 # tweaks
 # export(setSizeLim)
