- multilevel spatial copulas!
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@95 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -27,6 +27,7 @@ export(condSpVine,spCopPredict)
 # spatial
 export(getNeighbours)
 export(calcBins)
+export(calcSpTreeDists, dropSpTree)
 
 # fitting
 export(fitCorFun, loglikByCopulasLags, fitSpCopula, composeSpCopula)
