--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,8 +9,9 @@ export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 export(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
-export(vineCopula, spVineCopula)
-export(neighbourhood)
+export(spCopula, stCopula)
+export(vineCopula, spVineCopula, stVineCopula)
+export(neighbourhood, stNeighbourhood)
 export(empiricalCopula, genEmpCop)
 
 # general functions
@@ -20,18 +21,18 @@ export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
 export(qCopula_u)
 export(condSpVine,spCopPredict)
+export(condStVine,stCopPredict)
 
 # tweaks
 # export(setSizeLim)
 
 # spatial
-export(getNeighbours)
+export(getNeighbours,getStNeighbours)
 export(calcBins)
 export(calcSpTreeDists, dropSpTree)
 
 # fitting
 export(fitCorFun, loglikByCopulasLags, fitSpCopula, composeSpCopula)
-export(spCopula)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
@@ -39,8 +40,8 @@ export(kendallRP, criticalLevel, kendallDistribution, getKendallDistr)
 export(criticalPair, criticalTriple)
 
 ## classes
-exportClasses(asCopula, cqsCopula, neighbourhood, empiricalCopula)
-exportClasses(vineCopula, spCopula, stCopula, spVineCopula)
+exportClasses(asCopula, cqsCopula, neighbourhood, stNeighbourhood, empiricalCopula)
+exportClasses(spCopula, stCopula, vineCopula, spVineCopula, stVineCopula)
 
 # wrappers to CDVine
 exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
