- added thoughts-Marius folder - added C implementation of getNeighbours() in getNeighbours.experimental()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@102 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -27,7 +27,7 @@ export(condStVine,stCopPredict)
 # export(setSizeLim)
 
 # spatial
-export(getNeighbours,getStNeighbours)
+export(getNeighbours,getNeighbours.experimental, getStNeighbours)
 export(calcBins)
 export(calcSpTreeDists, dropSpTree)
 
