--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -3,7 +3,9 @@ Type: Package
 Title: copula driven spatial analysis
 Version: 0.1-1
 Date: 2013-07-23
-Author: Benedikt Graeler
+Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"), email =
+        "ben.graeler@uni-muenster.de"), person("Marius", "Appel",
+        role = "ctb"))
 Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of the spacetime package. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
