- moved sp and spacetime from depends to imports and adapted examples and demos to these changes.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@108 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,5 @@
-import(copula, spacetime, VineCopula)
+import(copula, VineCopula)
+import(sp, spacetime)
 
 # constructor
 export(asCopula, cqsCopula)
