--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
 Version: 0.1-1
-Date: 2013-09-18
+Date: 2013-10-24
 Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"), email =
         "ben.graeler@uni-muenster.de"), person("Marius", "Appel",
         role = "ctb"))
@@ -10,8 +10,8 @@ Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of the spacetime package. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula (>= 0.999-7), VineCopula (>= 1.1-2), methods, R (>= 2.15.0)
-Imports: sp, spacetime (>= 1.0-2)
+Depends: copula (>= 0.999-7), VineCopula (>= 1.1-2), R (>= 2.15.0)
+Imports: sp, spacetime (>= 1.0-2), methods
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
