--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -10,8 +10,8 @@ Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of the spacetime package. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-2
 LazyLoad: yes
-Depends: copula (>= 0.999-7), VineCopula (>= 1.1-2), R (>= 2.15.0)
-Imports: sp, spacetime (>= 1.0-2), methods
+Depends: copula (>= 0.999-7), R (>= 2.15.0)
+Imports: VineCopula (>= 1.1-2), sp, spacetime (>= 1.0-9), methods
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
