--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -24,6 +24,7 @@ export(invdduCopula, invddvCopula)
 export(qCopula_u)
 export(condSpVine,spCopPredict)
 export(condStVine,stCopPredict)
+export(spGaussCopPredict, spGaussLogLik)
 
 # tweaks
 # export(setSizeLim)
