--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -11,6 +11,8 @@ export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
 export(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
 export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
+export(tawnT1Copula, surTawnT1Copula, r90TawnT1Copula, r270TawnT1Copula)
+export(tawnT2Copula, surTawnT2Copula, r90TawnT2Copula, r270TawnT2Copula)
 export(spCopula, stCopula)
 export(vineCopula, spVineCopula, stVineCopula)
 export(neighbourhood, stNeighbourhood)
