- added 3 parameter Tawn Copula - added parametric and empirical tail dependence functions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@118 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -13,6 +13,7 @@ export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
 export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
 export(tawnT1Copula, surTawnT1Copula, r90TawnT1Copula, r270TawnT1Copula)
 export(tawnT2Copula, surTawnT2Copula, r90TawnT2Copula, r270TawnT2Copula)
+export(tawn3pCopula)
 export(spCopula, stCopula)
 export(vineCopula, spVineCopula, stVineCopula)
 export(neighbourhood, stNeighbourhood)
@@ -38,6 +39,8 @@ export(calcSpTreeDists, dropSpTree)
 
 # fitting
 export(fitCorFun, loglikByCopulasLags, fitSpCopula, composeSpCopula)
+export(tailDepFun, lowerTailDepFun, upperTailDepFun)
+export(empTailDepFun, lowerEmpTailDepFun, upperEmpTailDepFun)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
