--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,23 +4,14 @@ import(methods)
 
 # constructor
 export(asCopula, cqsCopula)
-export(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
-export(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
-export(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
-export(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
-export(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
-export(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
-export(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
-export(tawnT1Copula, surTawnT1Copula, r90TawnT1Copula, r270TawnT1Copula)
-export(tawnT2Copula, surTawnT2Copula, r90TawnT2Copula, r270TawnT2Copula)
 export(tawn3pCopula)
 export(spCopula, stCopula)
-export(vineCopula, spVineCopula, stVineCopula)
+export(spVineCopula, stVineCopula)
 export(neighbourhood, stNeighbourhood)
 export(empiricalCopula, genEmpCop)
 
 # general functions
-export(rankTransform, dependencePlot, unitScatter, univScatter, copulaFromFamilyIndex)
+export(rankTransform, dependencePlot, unitScatter, univScatter)
 export(fitCopula)
 export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
@@ -48,14 +39,5 @@ export(kendallRP, criticalLevel, kendallDistribution, getKendallDistr)
 export(criticalPair, criticalTriple)
 
 ## classes
-exportClasses(asCopula, cqsCopula, neighbourhood, stNeighbourhood, empiricalCopula)
-exportClasses(spCopula, stCopula, vineCopula, spVineCopula, stVineCopula)
-
-# wrappers to CDVine
-exportClasses(BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
-exportClasses(BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
-exportClasses(BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
-exportClasses(BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
-exportClasses(joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
-exportClasses(surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
-exportClasses(surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
+exportClasses(asCopula, cqsCopula, tawn3pCopula, neighbourhood, stNeighbourhood, empiricalCopula)
+exportClasses(spCopula, stCopula, spVineCopula, stVineCopula)
