--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
 Version: 0.2-0
-Date: 2014-02-07
+Date: 2014-02-12
 Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"),
                     email = "ben.graeler@uni-muenster.de"),
              person("Marius", "Appel",role = "ctb"))
@@ -26,6 +26,7 @@ Collate:
   spatio-temporalPreparation.R
   spVineCopula.R
   stVineCopula.R
+  stCoVarVineCopula.R
   utilities.R
   returnPeriods.R
   spatialGaussianCopula.R
