--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,6 +7,7 @@ export(asCopula, cqsCopula)
 export(tawn3pCopula)
 export(spCopula, stCopula)
 export(spVineCopula, stVineCopula)
+export(stCoVarVineCopula)
 export(neighbourhood, stNeighbourhood)
 export(empiricalCopula, genEmpCop)
 
@@ -18,6 +19,7 @@ export(invdduCopula, invddvCopula)
 export(qCopula_u)
 export(condSpVine,spCopPredict)
 export(condStVine,stCopPredict)
+export(condStCoVarVine)
 export(spGaussCopPredict, spGaussLogLik)
 
 # tweaks
@@ -26,7 +28,8 @@ export(spGaussCopPredict, spGaussLogLik)
 # spatial
 export(getNeighbours, getStNeighbours)
 export(calcBins)
-export(calcSpTreeDists, dropSpTree)
+export(calcSpTreeDists, dropSpTree, dropStTree)
+export(reduceNeighbours)
 
 # fitting
 export(fitCorFun, loglikByCopulasLags, fitSpCopula, composeSpCopula)
@@ -41,3 +44,4 @@ export(criticalPair, criticalTriple)
 ## classes
 exportClasses(asCopula, cqsCopula, tawn3pCopula, neighbourhood, stNeighbourhood, empiricalCopula)
 exportClasses(spCopula, stCopula, spVineCopula, stVineCopula)
+exportClasses(stCoVarVineCopula)
