- subsequent changes due to the redesign of neighbourhood classes
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@125 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -19,7 +19,7 @@ export(invdduCopula, invddvCopula)
 export(qCopula_u)
 export(condSpVine,spCopPredict)
 export(condStVine,stCopPredict)
-export(condStCoVarVine)
+export(condStCoVarVine, condCovariate)
 export(spGaussCopPredict, spGaussLogLik)
 
 # tweaks
