--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -32,7 +32,7 @@ export(calcSpTreeDists, dropSpTree, dropStTree)
 export(reduceNeighbours)
 
 # fitting
-export(fitCorFun, loglikByCopulasLags, fitSpCopula, composeSpCopula)
+export(fitCorFun, loglikByCopulasLags, loglikByCopulasStLags, fitSpCopula, composeSpCopula)
 export(tailDepFun, lowerTailDepFun, upperTailDepFun)
 export(empTailDepFun, lowerEmpTailDepFun, upperEmpTailDepFun)
 
