- added demo and smaller data set for JSS paper in preparation - added qCopula_v along the lines of qCopula_u - spcopula-Ex.Rout.save has been updated accordingly
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@132 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -16,7 +16,7 @@ export(rankTransform, dependencePlot, unitScatter, univScatter)
 export(fitCopula)
 export(dduCopula,ddvCopula)
 export(invdduCopula, invddvCopula)
-export(qCopula_u)
+export(qCopula_u, qCopula_v)
 export(condSpVine,spCopPredict)
 export(condStVine,stCopPredict)
 export(condStCoVarVine, condCovariate)
