--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
 Version: 0.2-0
-Date: 2014-03-18
+Date: 2014-03-24
 Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"),
                     email = "ben.graeler@uni-muenster.de"),
              person("Marius", "Appel",role = "ctb"))
@@ -12,6 +12,7 @@ License: GPL-2
 LazyLoad: yes
 Depends: copula (>= 0.999-7), VineCopula (>= 1.2-1), R (>= 2.15.0)
 Imports: sp, spacetime (>= 1.0-9), methods
+Suggests: evd
 URL: http://r-forge.r-project.org/projects/spcopula/
 Collate:
   Classes.R
