- added a new kendall function up to dimension 4 for Archimedean copulas
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@139 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -40,6 +40,7 @@ export(empTailDepFun, lowerEmpTailDepFun, upperEmpTailDepFun)
 export(genEmpKenFun, genInvKenFun)
 export(kendallRP, criticalLevel, kendallDistribution, getKendallDistr)
 export(criticalPair, criticalTriple)
+export(kendall)
 
 ## classes
 exportClasses(asCopula, cqsCopula, tawn3pCopula, neighbourhood, stNeighbourhood, empiricalCopula)
