--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: spcopula
 Type: Package
 Title: copula driven spatial analysis
 Version: 0.2-1
-Date: 2014-10-01
+Date: 2015-02-06
 Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"),
                     email = "ben.graeler@uni-muenster.de"),
              person("Marius", "Appel",role = "ctb"))
@@ -10,7 +10,7 @@ Maintainer: Benedikt Graeler <ben.graeler@uni-muenster.de>
 Description: This package provides a framework to analyse via copulas spatial and spatio-temporal data provided in the format of sp and spacetime package respectively. Additionally, support for calculating different multivariate return periods is implemented.
 License: GPL-3
 LazyLoad: yes
-Depends: copula (>= 0.999-7), R (>= 2.15.0), VineCopula (>= 1.2-1)
+Depends: copula (>= 0.999-12), VineCopula (>= 1.4), R (>= 3.1.0)
 Imports: methods, sp, spacetime (>= 1.0-9)
 Suggests: evd
 URL: http://r-forge.r-project.org/projects/spcopula/
@@ -33,4 +33,5 @@ Collate:
   spatialGaussianCopula.R
   tawn3pCopula.R
   tailDependenceFunctions.R
+  KendallDistribution.R
   zzz.R
