--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,34 @@
-import(copula, VineCopula)
+import(copula)
 import(sp, spacetime)
 import(methods)
+
+importMethodsFrom(VineCopula, fitCopula)
+importMethodsFrom(VineCopula, dduCopula,ddvCopula)
+
+importFrom(VineCopula, BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
+importFrom(VineCopula, BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
+importFrom(VineCopula, BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
+importFrom(VineCopula, BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
+importFrom(VineCopula, joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
+importFrom(VineCopula, surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
+importFrom(VineCopula, surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
+importFrom(VineCopula, tawnT1Copula, surTawnT1Copula, r90TawnT1Copula, r270TawnT1Copula)
+importFrom(VineCopula, tawnT2Copula, surTawnT2Copula, r90TawnT2Copula, r270TawnT2Copula)
+importFrom(VineCopula, vineCopula)
+importFrom(VineCopula, copulaFromFamilyIndex)
+importFrom(VineCopula, TauMatrix, BiCopSelect)
+
+importClassesFrom(VineCopula, BB1Copula, surBB1Copula, r90BB1Copula, r270BB1Copula)
+importClassesFrom(VineCopula, BB6Copula, surBB6Copula, r90BB6Copula, r270BB6Copula)
+importClassesFrom(VineCopula, BB7Copula, surBB7Copula, r90BB7Copula, r270BB7Copula)
+importClassesFrom(VineCopula, BB8Copula, surBB8Copula, r90BB8Copula, r270BB8Copula)
+importClassesFrom(VineCopula, joeBiCopula, surJoeBiCopula, r90JoeBiCopula, r270JoeBiCopula)
+importClassesFrom(VineCopula, surClaytonCopula, r90ClaytonCopula, r270ClaytonCopula)
+importClassesFrom(VineCopula, surGumbelCopula, r90GumbelCopula, r270GumbelCopula)
+importClassesFrom(VineCopula, tawnT1Copula, surTawnT1Copula, r90TawnT1Copula, r270TawnT1Copula)
+importClassesFrom(VineCopula, tawnT2Copula, surTawnT2Copula, r90TawnT2Copula, r270TawnT2Copula)
+importClassesFrom(VineCopula, vineCopula)
+
 
 # constructor
 export(asCopula, cqsCopula)
