introduced limit of the tail dependence functions for 2-dimensional copulas in view of paper by Joe et al. (2010) -> rename of tailDepFun to bivTailDepFun
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@147 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -61,8 +61,8 @@ export(reduceNeighbours)
 
 # fitting
 export(fitCorFun, loglikByCopulasLags, loglikByCopulasStLags, fitSpCopula, composeSpCopula)
-export(tailDepFun, lowerTailDepFun, upperTailDepFun)
-export(empTailDepFun, lowerEmpTailDepFun, upperEmpTailDepFun)
+export(bivTailDepFun, lowerBivTailDepFun, upperBivTailDepFun)
+export(empBivTailDepFun, lowerEmpBivTailDepFun, upperEmpBivTailDepFun)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
