- changed (again) naming of tail dependence functions to the more descriptive name bivJointDepFun - the bivariate joint dependence functions - updated Rout.save files
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@148 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -61,8 +61,8 @@ export(reduceNeighbours)
 
 # fitting
 export(fitCorFun, loglikByCopulasLags, loglikByCopulasStLags, fitSpCopula, composeSpCopula)
-export(bivTailDepFun, lowerBivTailDepFun, upperBivTailDepFun)
-export(empBivTailDepFun, lowerEmpBivTailDepFun, upperEmpBivTailDepFun)
+export(bivJointDepFun, lowerBivJointDepFun, upperBivJointDepFun)
+export(empBivJointDepFun, lowerEmpBivJointDepFun, upperEmpBivJointDepFun)
 
 # MRP functions
 export(genEmpKenFun, genInvKenFun)
