adopting for changes in package copula
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@155 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,6 +2,12 @@ import(copula)
 import(sp, spacetime)
 import(methods)
 
+importFrom("graphics", "abline", "smoothScatter")
+  importFrom("stats", "D", "approxfun", "cor", "ecdf", "integrate", "lm",
+             "optim", "optimise", "optimize", "pnorm", "predict", "pt",
+             "qnorm", "qt", "quantile", "runif", "uniroot", "var")
+  importFrom("utils", "setTxtProgressBar", "txtProgressBar")
+
 importMethodsFrom(VineCopula, fitCopula)
 importMethodsFrom(VineCopula, dduCopula,ddvCopula)
 
