--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: spcopula
 Type: Package
 Title: Copula Driven Spatio-Temporal Analysis
 Version: 0.2-1
-Date: 2016-08-30
+Date: 2016-09-01
 Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"),
                     email = "ben.graeler@uni-muenster.de"),
              person("Marius", "Appel",role = "ctb"))
@@ -21,6 +21,7 @@ Collate:
   cqsCopula.R
   asCopula.R 
   leafCopula.R
+  mixtureCopula.R
   spCopula.R 
   stCopula.R
   spatialPreparation.R
