- adds truncated copula
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spcopula@164 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -47,6 +47,7 @@ export(neighbourhood, stNeighbourhood)
 export(empiricalCopula, genEmpCop, empSurCopula, genEmpSurCop)
 export(mixtureCopula)
 export(hkCopula)
+export(trunCopula)
 
 # general functions
 export(rankTransform, dependencePlot, unitScatter, univScatter)
@@ -85,3 +86,4 @@ exportClasses(spCopula, stCopula, spVineCopula, stVineCopula)
 exportClasses(stCoVarVineCopula)
 exportClasses(mixtureCopula)
 exportClasses(hkCopula)
+exportClasses(trunCopula)
