--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: spcopula
 Type: Package
 Title: Copula Driven Analysis - Multivariate, Spatial, Spatio-Temporal
-Version: 0.2-2
-Date: 2017-02-08
+Version: 0.2-4
+Date: 2017-02-28
 Authors@R: c(person("Benedikt", "Graeler", role = c("aut", "cre"),
                     email = "b.graeler@52north.org"),
              person("Marius", "Appel",role = "ctb"))
@@ -36,4 +36,5 @@ Collate:
   tailDependenceFunctions.R
   KendallDistribution.R
   hkCopula.R
+  trunCopula.R
   zzz.R
